--- a/portifolioTDS-main/contatos.html
+++ b/portifolioTDS-main/contatos.html
@@ -6,6 +6,7 @@
     <title>Contatos</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
             <header class="header-principal">
@@ -44,26 +45,28 @@
                 <form>
                     <div class="input-grupo">
                         <label>Nome:</label>
-                        <input type="text">
+                        <input type="text" id="nome">
                     </div>
 
                     <div class="input-grupo">
                         <label>Email:</label>
-                        <input type="email">
+                        <input type="email" id="email">
                     </div>
 
                     <div class="input-grupo">
                         <label>Telefone:</label>
-                        <input type="tel">
+                        <input type="tel" id="telefone">
                     </div>
 
                     <div class="input-grupo">
                         <label>Mensagem:</label>
-                        <textarea></textarea>
+                        <textarea id="mensagem"></textarea>
                     </div>
-                    <button class="envia-form">Enviar</button>
+                    <button class="envia-form" onclick="verificarCampos(event);">Enviar</button>
+                    <p id="mensagemObt"></p>
                 </form>
             </div>
         </main>
 </body>
+<script src="./script.js"></script>
 </html>
